# progpath

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CheckProgPath.cmake  INTEGRATION.md  LICENSE  README.md  demo.cpp  init.cpp  main.c  progpath.3  progpath.c  progpath.cpp  progpath.h  progpath.h.in  progpath.pc.in  progpathConfig.cmake.in  progpath_config.h.in  progpath_version.h.in
.github/workflows/: ci.yml  code.yml  codeql.yml  matrix.yml  release.yml  test.yml
tests/: CMakeLists.txt  test_api.c  test_basic.c  test_c_init.c  test_correctness.c  test_cpp.cpp  test_resolve_path.cpp  test_single_header_c.c  test_single_header_cpp.cpp  test_single_header_impl.cpp  test_single_header_split_c.c
tests/test_install/: CMakeLists.txt  test_consumer.c  test_header_consumer.cpp
